--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -34,8 +34,6 @@
                 <button class="ghost"><a href="/">Login as Student</a></button>
             </div>
         
-        </div> <!-- /container -->
-
-        <!-- No Bootstrap JS required -->
+        </div>
     </body>
 </html>
