--- a/templates/placement_form.html
+++ b/templates/placement_form.html
@@ -23,9 +23,19 @@
             <label for="date">Date</label><br>
             <input type="date" id="date" name="date"><br>
             <label for="lpa">Branches</label><br>
-            <input type="branch" id="branch" name="branch"><br>
+            <select class="small-input" name="dept" id="dept" required>
+                <option value="">Select</option>
+                <option value="Computer Science">Computer Science</option>
+                <option value="Information Technology">Information Technology</option>
+                <option value="Electronics And Communication">Electronics & Communication</option>
+                <option value="Electrical">Electrical & Electronics</option>
+                <option value="Mechanical">Mechanical Engineering</option>
+                <option value="Civil">Civil Engineering</option>
+            </select><br>
             <label for="lpa">Salary</label><br>
             <input type="text" id="lpa" name="salary"><br>
+            <label for="lpa">Last date for registration</label><br>
+            <input type="date" id="l-date" name="lastdate"><br>
             <!--<a href="https://docs.google.com/forms/u/0/?tgif=d&ec=asw-forms-globalnav-goto">create form</a><br> -->
             <label for="form">form link</label><br>
             <input type="url" id="form" name="reg-form"><br>
