Career resources integrated

--- a/templates/home.html
+++ b/templates/home.html
@@ -45,6 +45,9 @@
         async function drives() {
             window.location.href = '/drives';
         }
+        async function pyqpapers() {
+            window.location.href = '/pqpapers';
+        }
     </script>
     <script>
         async function logout() {
@@ -60,7 +63,7 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item">Courses</button>
+        <button class="menu-item" onclick="pyqpapers()">Career Resources</button>
         <button class="menu-item" onclick="drives()">Upcoming Drives</button>
         <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
     </div>
