--- a/templates/communication/grammar_test.html
+++ b/templates/communication/grammar_test.html
@@ -5,12 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Speech to Grammar Marks</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
+        @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+
+        body{
+            font-family: 'Montserrat', sans-serif;
+            margin: 0;
         }
         h1 {
             color: #333;
+        }
+        .container{
+            display: flex;
+            justify-content:center;
+            flex-direction: column;
+            align-items:center;
+            height: 100vh;
         }
         #record-btn {
             background-color: #4CAF50;
@@ -28,6 +37,92 @@
         #message {
             margin-top: 20px;
         }
+        .menu{
+            background-color: #FF4B2B;
+            width: 15%;
+            height: 100vh;
+            float: left;
+        }   
+        .logo{
+            padding:25px 18px;
+            font-size: 22px;
+            text-align: center;
+            color: white;
+        }
+        .menu-item{
+            font-size: large;
+            color: white;
+            background: none;
+            border: none;
+            text-align: center;
+            width: 210px;
+            height: 40px;
+            border-radius: 0px 20px 20px 0px;
+            padding-top: 3px;
+            margin-bottom: 10px;
+            
+
+        }
+        .menu-item-logout {
+            margin-left: 0px;
+        }
+        .menu-item:hover{
+            background-color:rgba(255, 255, 255, 0.5);
+            
+        }
+
+        .base-timer {
+  position: relative;
+  width: 300px;
+  height: 300px;
+}
+
+.base-timer__svg {
+  transform: scaleX(-1);
+}
+
+.base-timer__circle {
+  fill: none;
+  stroke: none;
+}
+
+.base-timer__path-elapsed {
+  stroke-width: 7px;
+  stroke: grey;
+}
+
+.base-timer__path-remaining {
+  stroke-width: 7px;
+  stroke-linecap: round;
+  transform: rotate(90deg);
+  transform-origin: center;
+  transition: 1s linear all;
+  fill-rule: nonzero;
+  stroke: currentColor;
+}
+
+.base-timer__path-remaining.green {
+  color: rgb(65, 184, 131);
+}
+
+.base-timer__path-remaining.orange {
+  color: orange;
+}
+
+.base-timer__path-remaining.red {
+  color: red;
+}
+
+.base-timer__label {
+  position: absolute;
+  width: 300px;
+  height: 300px;
+  top: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 48px;
+}
     </style>
     <script>
         function startRecording() {
@@ -36,11 +131,135 @@
     </script>
 </head>
 <body>
-    <h1>Communication Assessment Test</h1>
-    <p>Introduce yourself in 120 seconds:</p>
-    <div id="message"></div>
-    <form action="/record/{{ user_id }}" method="post" onsubmit="startRecording()">
-        <button id="record-btn" type="submit">Record Audio</button>
-    </form>
+    <div class="menu">
+        <h1 class="logo">PLACEMENT PREDICTOR</h1>
+        <button class="menu-item">Courses</button>
+        <button class="menu-item" onclick="drives()">Upcoming Drives</button>
+        <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
+    </div>
+    <div class="container">
+        <h1>Communication Assessment Test</h1>
+        <p>Introduce yourself in 120 seconds:</p>
+        <div id="message"></div>
+        <div id="app"></div>
+        <form action="/record/{{ user_id }}" method="post" onsubmit="startRecording()">
+            <button id="record-btn" type="submit">Record Audio</button>
+        </form>
+    </div>
+    <script>
+        const FULL_DASH_ARRAY = 283;
+        const WARNING_THRESHOLD = 10;
+        const ALERT_THRESHOLD = 5;
+
+        const COLOR_CODES = {
+        info: {
+            color: "green"
+        },
+        warning: {
+            color: "orange",
+            threshold: WARNING_THRESHOLD
+        },
+        alert: {
+            color: "red",
+            threshold: ALERT_THRESHOLD
+        }
+        };
+
+        const TIME_LIMIT = 20;
+        let timePassed = 0;
+        let timeLeft = TIME_LIMIT;
+        let timerInterval = null;
+        let remainingPathColor = COLOR_CODES.info.color;
+
+        document.getElementById("app").innerHTML = `
+        <div class="base-timer">
+        <svg class="base-timer__svg" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg">
+            <g class="base-timer__circle">
+            <circle class="base-timer__path-elapsed" cx="50" cy="50" r="45"></circle>
+            <path
+                id="base-timer-path-remaining"
+                stroke-dasharray="283"
+                class="base-timer__path-remaining ${remainingPathColor}"
+                d="
+                M 50, 50
+                m -45, 0
+                a 45,45 0 1,0 90,0
+                a 45,45 0 1,0 -90,0
+                "
+            ></path>
+            </g>
+        </svg>
+        <span id="base-timer-label" class="base-timer__label">${formatTime(
+            timeLeft
+        )}</span>
+        </div>
+        `;
+
+        startTimer();
+
+        function onTimesUp() {
+        clearInterval(timerInterval);
+        }
+
+        function startTimer() {
+        timerInterval = setInterval(() => {
+            timePassed = timePassed += 1;
+            timeLeft = TIME_LIMIT - timePassed;
+            document.getElementById("base-timer-label").innerHTML = formatTime(
+            timeLeft
+            );
+            setCircleDasharray();
+            setRemainingPathColor(timeLeft);
+
+            if (timeLeft === 0) {
+            onTimesUp();
+            }
+        }, 1000);
+        }
+
+        function formatTime(time) {
+        const minutes = Math.floor(time / 60);
+        let seconds = time % 60;
+
+        if (seconds < 10) {
+            seconds = `0${seconds}`;
+        }
+
+        return `${minutes}:${seconds}`;
+        }
+
+        function setRemainingPathColor(timeLeft) {
+        const { alert, warning, info } = COLOR_CODES;
+        if (timeLeft <= alert.threshold) {
+            document
+            .getElementById("base-timer-path-remaining")
+            .classList.remove(warning.color);
+            document
+            .getElementById("base-timer-path-remaining")
+            .classList.add(alert.color);
+        } else if (timeLeft <= warning.threshold) {
+            document
+            .getElementById("base-timer-path-remaining")
+            .classList.remove(info.color);
+            document
+            .getElementById("base-timer-path-remaining")
+            .classList.add(warning.color);
+        }
+        }
+
+        function calculateTimeFraction() {
+        const rawTimeFraction = timeLeft / TIME_LIMIT;
+        return rawTimeFraction - (1 / TIME_LIMIT) * (1 - rawTimeFraction);
+        }
+
+        function setCircleDasharray() {
+        const circleDasharray = `${(
+            calculateTimeFraction() * FULL_DASH_ARRAY
+        ).toFixed(0)} 283`;
+        document
+            .getElementById("base-timer-path-remaining")
+            .setAttribute("stroke-dasharray", circleDasharray);
+        }
+    </script>
 </body>
 </html>
