Communication updated with semantic score

--- a/templates/communication/grammar_mark.html
+++ b/templates/communication/grammar_mark.html
@@ -68,7 +68,7 @@
     </div>
     <h1>Communication Assessment Result</h1>
     <div id="result-container">
-        <p id="result">Your Score: {{ grammar_marks }}</p>
+        <p id="result">Your Score: {{ total }}</p>
         <p>Your  marks indicate how effectively you communicated your message.</p>
     </div>
 </body>
