--- a/templates/drive.html
+++ b/templates/drive.html
@@ -7,14 +7,18 @@
     <title>Placements</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='drive.css') }}">
     <script>
-        function toggleDetails(link) {
-            var details = link.nextElementSibling;
-            if (details.style.display === "none") {
-                details.style.display = "block";
-                link.textContent = "View Less";
+        function toggleDetails() {
+            var dots = document.getElementById("dots");
+            var moreText = document.getElementById("more");
+            var btnText = document.getElementById("view-more");
+            if (dots.style.display === "none") {
+                dots.style.display = "inline";
+                btnText.innerHTML = "View More"; 
+                moreText.style.display = "none";
             } else {
-                details.style.display = "none";
-                link.textContent = "View More";
+                dots.style.display = "none";
+                btnText.innerHTML = "View Less"; 
+                moreText.style.display = "inline";
             }
         }
     </script>
@@ -34,15 +38,16 @@
             <h3 style="padding-bottom: 20px;">{{ placement['cname'] }}</h3>
             <p>Location : {{ placement['location'] }}</p>
             <p>Position : {{ placement['position'] }}</p>
-            <a class="btn" href="{{ placement['reg-form'] }}">Apply</a>
-            <a class="view-more" href="#" onclick="toggleDetails(this)">View More</a>
-            <div class="additional-details" style="display: none;">
+            <span id="dots">...</span>
+            <span id="more" style="display: none;">
                 <p>Description : {{ placement['desc'] }}</p>
                 <p>Date of Drive : {{ placement['date'] }}</p>
                 <p>Branches allowed : {{ placement['dept'] }}</p>
                 <p>Salary offering : {{ placement['salary'] }}</p>
                 <p class="l-date">Last date of apply : {{ placement['lastdate'] }}</p>
-            </div>
+                <a class="btn" href="{{ placement['reg-form'] }}">Apply</a>
+            </span>
+            <button id="view-more" onclick="toggleDetails()">View More</button>
         </div>
         {% endfor %}
     </div>
