Back to home button added

--- a/templates/communication/grammar_mark.html
+++ b/templates/communication/grammar_mark.html
@@ -64,7 +64,7 @@
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
         <button class="menu-item">Courses</button>
         <button class="menu-item" onclick="drives()">Upcoming Drives</button>
-        <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
+        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Back to Home</a></button>
     </div>
     <h1>Communication Assessment Result</h1>
     <div id="result-container">
