--- a/templates/drive.html
+++ b/templates/drive.html
@@ -26,7 +26,7 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item">Home</button>
+        <button class="menu-item"><a href="/home/{{user_id}}">Home</a></button>
     </div>
     <div class="title">
         <h2 class="t1">Upcoming Drives</h2>
