--- a/templates/form.html
+++ b/templates/form.html
@@ -13,7 +13,7 @@
     </div>
     <div class="div-form">
         
-        <form action="/submit_form/{{ user_id }}/{{ user_email }}" id="placementForm" method="POST">
+        <form action="/submit_form/{{ user_id }}" id="placementForm" method="POST">
             <div class="col-container">
                 <div class="col1">
                     <label class="form-label" for="name">Name</label>
