--- a/templates/previousqp/index.html
+++ b/templates/previousqp/index.html
@@ -6,6 +6,10 @@
     <title>Previous Question Papers</title>
 </head>
 <body>
+    <div class="menu">
+        <h1 class="logo">PLACEMENT PREDICTOR</h1>
+        <button class="menu-item"><a href="/home/{{user_id}}">Home</a></button>
+    </div>
     <h1>Previous Question Papers</h1>
     <ul>
         {% for paper in papers %}
