--- a/templates/result.html
+++ b/templates/result.html
@@ -7,7 +7,7 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item"><a href="/home">Go to home</a></button> 
+        <button class="menu-item"><a href="/home/{{user_id}}">Go to home</a></button> 
     </div>
     <div class="container">
         <div class="content">
