--- a/templates/placement_form.html
+++ b/templates/placement_form.html
@@ -10,7 +10,7 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item" onclick="home()">Home</button>   
+        <button class="menu-item"><a class="logout-link" href="/ad_home">Back</a></button>
     </div>
     <div class="form">
         <form action="/postnewplacement" method="POST">
