--- a/static/placement_form.css
+++ b/static/placement_form.css
@@ -15,6 +15,10 @@ input, select{
     width: 400px;
     margin-bottom: 10px;
 }
+.logout-link{
+    text-decoration: none; /* Removes underline */
+    color: inherit; /* Inherits color from parent element */
+}
 .submit{
     width: 100px;
     height: 30px;
