--- a/templates/previousqp/index.html
+++ b/templates/previousqp/index.html
@@ -13,7 +13,7 @@
         <button class="menu-item" onclick="drives('{{user_id}}')">Upcoming Drives</button>
         <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
     </div>
-    <h1>Previous Question Papers</h1>
+    <h1>Career Resources</h1>
     <div class="card-container">
         {% for paper in papers %}
             <div class="card">
