--- a/templates/aptitude/result.html
+++ b/templates/aptitude/result.html
@@ -9,14 +9,16 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item"><a href="/home/{{user_id}}">Go to home</a></button> 
+        <button class="menu-item" onclick="pyqpapers('{{user_id}}')">Career Resources</button>
+        <button class="menu-item" onclick="drives('{{user_id}}')">Upcoming Drives</button>
+        <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
     </div>
     <div class="container">
         
         <div class="content">
             <h1>Quiz Result</h1>
-            <p>Your score: {{ score }} out of {{ total }}</p>
-            <p>Score out of 10: {{apt_score}}</p>
+            <p>Your score: <span>{{ score }}</span> out of {{ total }}</p>
+            <p>Score out of 10: <span>{{apt_score}}</span></p>
         </div>
     </div>
 </body>
