--- a/static/result.css
+++ b/static/result.css
@@ -34,16 +34,34 @@ body{
     border-radius: 0px 20px 20px 0px;
     padding-top: 3px;
     margin-bottom: 10px;
+    
+
+}
+.menu-item:hover{
+    background-color:rgba(255, 255, 255, 0.5);
+    
 }
 a{
     color: white;
     text-decoration: none;
 }
-h1{
+.content h1{
     text-align: center;
     margin-bottom: 50px;
+    font-size: 80px;
+    color: white;
+    font-size: 60px;
+    text-shadow: -2px 2px 0 #20948B,
+                2px 2px 0 #6AB187,
+                2px -2px 0 #20948B,
+                -2px -2px 0 #6AB187;
 }
+p{
+    font-size: 40px;
+    text-align: center;
+}
+span{
+    color:#FF4B2B;
+    font-weight: bold;
 
-.content h1{
-    color: #FF4B2B;
 }
