--- a/templates/communication/grammar_test.html
+++ b/templates/communication/grammar_test.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Speech to Grammar Marks</title>
+    <title>Communication Test</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
@@ -13,6 +13,10 @@
         }
         h1 {
             color: #333;
+            font-size: 50px;
+        }
+        p{
+            font-size: 30px;
         }
         .container{
             display: flex;
@@ -22,7 +26,7 @@
             height: 100vh;
         }
         #record-btn {
-            background-color: #4CAF50;
+            background-color: #FF4B2B;
             border: none;
             color: white;
             padding: 15px 32px;
@@ -42,7 +46,7 @@
             width: 15%;
             height: 100vh;
             float: left;
-        }   
+        }
         .logo{
             padding:25px 18px;
             font-size: 22px;
@@ -60,69 +64,70 @@
             border-radius: 0px 20px 20px 0px;
             padding-top: 3px;
             margin-bottom: 10px;
-            
-
-        }
-        .menu-item-logout {
-            margin-left: 0px;
+                
         }
         .menu-item:hover{
             background-color:rgba(255, 255, 255, 0.5);
-            
+                
         }
+        a{
+            color: white;
+            text-decoration: none;
+        }
+                
 
         .base-timer {
-  position: relative;
-  width: 300px;
-  height: 300px;
-}
+            position: relative;
+            width: 300px;
+            height: 300px;
+        }
 
-.base-timer__svg {
-  transform: scaleX(-1);
-}
+        .base-timer__svg {
+            transform: scaleX(-1);
+        }
 
-.base-timer__circle {
-  fill: none;
-  stroke: none;
-}
+        .base-timer__circle {
+            fill: none;
+            stroke: none;
+        }
 
-.base-timer__path-elapsed {
-  stroke-width: 7px;
-  stroke: grey;
-}
+        .base-timer__path-elapsed {
+            stroke-width: 7px;
+            stroke: grey;
+        }
 
-.base-timer__path-remaining {
-  stroke-width: 7px;
-  stroke-linecap: round;
-  transform: rotate(90deg);
-  transform-origin: center;
-  transition: 1s linear all;
-  fill-rule: nonzero;
-  stroke: currentColor;
-}
+        .base-timer__path-remaining {
+            stroke-width: 7px;
+            stroke-linecap: round;
+            transform: rotate(90deg);
+            transform-origin: center;
+            transition: 1s linear all;
+            fill-rule: nonzero;
+            stroke: currentColor;
+        }
 
-.base-timer__path-remaining.green {
-  color: rgb(65, 184, 131);
-}
+        .base-timer__path-remaining.green {
+            color: rgb(65, 184, 131);
+        }
 
-.base-timer__path-remaining.orange {
-  color: orange;
-}
+        .base-timer__path-remaining.orange {
+            color: orange;
+        }
 
-.base-timer__path-remaining.red {
-  color: red;
-}
+        .base-timer__path-remaining.red {
+            color: red;
+        }
 
-.base-timer__label {
-  position: absolute;
-  width: 300px;
-  height: 300px;
-  top: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 48px;
-}
+        .base-timer__label {
+            position: absolute;
+            width: 300px;
+            height: 300px;
+            top: 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 48px;
+        }
     </style>
     <script>
         function startRecording() {
@@ -134,8 +139,8 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item">Courses</button>
-        <button class="menu-item" onclick="drives()">Upcoming Drives</button>
+        <button class="menu-item" onclick="pyqpapers('{{user_id}}')">Career Resources</button>
+        <button class="menu-item" onclick="drives('{{user_id}}')">Upcoming Drives</button>
         <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
     </div>
     <div class="container">
