--- a/templates/result.html
+++ b/templates/result.html
@@ -7,7 +7,9 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item"><a href="/home/{{user_id}}">Go to home</a></button> 
+        <button class="menu-item" onclick="pyqpapers('{{user_id}}')">Career Resources</button>
+        <button class="menu-item" onclick="drives('{{user_id}}')">Upcoming Drives</button>
+        <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
     </div>
     <div class="container">
         <div class="content">
