--- a/static/admin_login.css
+++ b/static/admin_login.css
@@ -126,3 +126,16 @@ input{
 .signup-h1{
     color: #FFFFFF;
 }
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    padding: 0.75rem 1.25rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
+
+.mt-3 {
+    margin-top: 1rem;
+}
