--- a/static/placement_form.css
+++ b/static/placement_form.css
@@ -74,3 +74,25 @@ button:hover{
 	height: 100vh;
 	margin:0 50px;
 }
+
+.success {
+    color: #155724;
+    background-color: #d4edda;
+    border-color: #c3e6cb;
+    padding: 0.75rem 1.25rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    padding: 0.75rem 1.25rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
+
+.mt-3 {
+    margin-top: 1rem;
+}
