--- a/static/signup.css
+++ b/static/signup.css
@@ -132,3 +132,16 @@ input{
 	border-color: #952bff;
 	background-color: rgb(149, 43, 255, 0.5);
 }
+
+.alert-danger {
+    color: #721c24;
+    background-color: #f8d7da;
+    border-color: #f5c6cb;
+    padding: 0.75rem 1.25rem;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+}
+
+.mt-3 {
+    margin-top: 1rem;
+}
