--- a/templates/admin_login.html
+++ b/templates/admin_login.html
@@ -12,6 +12,17 @@
         <div class="container">
             <div class="form-container .sign-in-container">
                 <h1 class="mb-4">Placement Predictor</h1>
+                {% if error %}
+                    <div class="alert alert-danger mt-3" role="alert">
+                        {{ error }}
+                    </div>
+                {% endif %}
+                {% if msg %}
+                    <div class="alert alert-danger mt-3" role="alert">
+                        {{ msg }}
+                    </div>
+                {% endif %}
+                
                 <form method="POST" action="/admin_home" class="form-signin">
                     <h2 class="form-signin-heading">Admin signin</h2>
                     <label for="inputEmail" class="sr-only">Email address</label>
@@ -21,12 +32,6 @@
                     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
                 </form>
 
-                {% if error %}
-                    <div class="alert alert-danger mt-3" role="alert">
-                        {{ error }}
-                    </div>
-                {% endif %}
-                
             </div>
             <div class="overlay-panel overlay-right">
                 
