--- a/templates/communication/grammar_test.html
+++ b/templates/communication/grammar_test.html
@@ -6,7 +6,20 @@
     <title>Communication Test</title>
     <style>
         @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+        
+        .alert-danger {
+            color: #721c24;
+            background-color: #f8d7da;
+            border-color: #f5c6cb;
+            padding: 0.75rem 1.25rem;
+            border: 1px solid transparent;
+            border-radius: 0.25rem;
+        }
 
+        .mt-3 {
+            margin-top: 1rem;
+            margin-bottom: 1rem;
+        }
         body{
             font-family: 'Montserrat', sans-serif;
             margin: 0;
@@ -146,7 +159,11 @@
         <p>Introduce yourself in 60 seconds:</p>
         <div id="message"></div>
         <div id="app"></div>
-        <div id="error">{{error}}</div>
+        {% if error %}
+        <div class="alert alert-danger mt-3" role="alert">
+            {{ error }}
+        </div>
+        {% endif %}
         <form action="/record/{{ user_id }}" method="post" onsubmit="startRecording()">
             <button id="record-btn" type="submit">Record Audio</button>
         </form>
