--- a/templates/placement_form.html
+++ b/templates/placement_form.html
@@ -42,7 +42,16 @@
             <label for="form">form link:</label><br>
             <input type="url" id="form" name="reg-form" required><br>
             <button class="submit" type="submit">Submit</button>
-            
+            {% if error %}
+                    <div class="alert alert-danger mt-3" role="alert">
+                        {{ error }}
+                    </div>
+            {% endif %}
+            {% if msg %}
+            <div class="success mt-3" role="msg">
+                {{ msg }}
+            </div>
+        {% endif %}
         </form>
     </div>
 </body>
