--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,6 +10,11 @@
         <div class="container">
             <div class="form-container .sign-in-container">
                 <h1 class="mb-4">PLACEMENT PREDICTOR</h1>
+                {% if error %}
+                    <div class="alert alert-danger mt-3" role="alert">
+                        {{ error }}
+                    </div>
+                {% endif %}
                 <form action="/signup_page" method="post" class="form-signup">
                     <label for="email">Email</label>
                     <input type="email" id="email" name="email" required>
@@ -19,9 +24,6 @@
                     <input type="password" id="confirmPassword" name="confirmPassword" required>
                     <button  type="submit">Sign up</button>
                 </form>
-                {% if error %}
-                    <p>{{ error }}</p>
-                {% endif %}
             </div>
             <div class="overlay-panel overlay-right">
 			    <h1 class="signup-h1">Hello, Friend!</h1>
