--- a/templates/student_details.html
+++ b/templates/student_details.html
@@ -8,7 +8,11 @@
     <title>Student Details</title>
 </head>
 <body>
-    <div>
+    <div class="container">
+        <div class="menu">
+            <h1 class="logo">PLACEMENT PREDICTOR</h1>
+            <button class="menu-item" onclick="logout()">Logout</button>   
+        </div>
             
         <table class="tbl">
             <tr>
