--- a/templates/communication/grammar_mark.html
+++ b/templates/communication/grammar_mark.html
@@ -66,7 +66,7 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Back to Home</a></button>
+        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Home</a></button>
     </div>
     <h1>Communication Assessment Result</h1>
     <div id="result-container">
