--- a/templates/student_details.html
+++ b/templates/student_details.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="menu">
             <h1 class="logo">PLACEMENT PREDICTOR</h1>
-            <button class="menu-item" onclick="logout()">Logout</button>   
+            <button class="menu-item"><a class="logout-link" href="/ad_home">Back</a></button> 
         </div>
             
         <table class="tbl">
