--- a/static/signup.css
+++ b/static/signup.css
@@ -145,3 +145,7 @@ input{
 .mt-3 {
     margin-top: 1rem;
 }
+.logout-link{
+    text-decoration: none; /* Removes underline */
+    color: inherit; /* Inherits color from parent element */
+}
