--- a/templates/communication/grammar_test.html
+++ b/templates/communication/grammar_test.html
@@ -15,7 +15,7 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Home</a></button>
+        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Back</a></button>
     </div>
     <div class="container">
         <h1>Communication Assessment Test</h1>
