--- a/templates/previousqp/index.html
+++ b/templates/previousqp/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Home</a></button>
+        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Back</a></button>
     </div>
     <h1>Career Resources</h1>
     <div class="card-container">
