--- a/templates/result.html
+++ b/templates/result.html
@@ -7,7 +7,7 @@
 <body>
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
-        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Home</a></button>
+        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Back</a></button>
         <button class="menu-item"><a class="logout-link" href="/">Logout</a></button>
     </div>
     <div class="container">
