Instructions page added for both aptitude and communication test

--- a/templates/communication/grammar_test.html
+++ b/templates/communication/grammar_test.html
@@ -19,7 +19,7 @@
     <div class="menu">
         <h1 class="logo">PLACEMENT PREDICTOR</h1>
         <button class="menu-item"><a class="logout-link" href="/communication/{{user_id}}" onclick="location.reload();">Refresh</a></button> <!-- Refresh link -->
-        <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}" onclick="location.reload()";>Back</a></button>
+        <button class="menu-item"><a class="logout-link" href="/com_instructions/{{user_id}}" onclick="location.reload()";>Back</a></button>
     </div>
     <div class="container">
         <h1>Communication Assessment Test</h1>
