--- a/templates/home.html
+++ b/templates/home.html
@@ -36,11 +36,11 @@
     </script>
     <script>
         async function aptitude_test(user_id) {
-            window.location.href = `/aptitude/${user_id}`;
+            window.location.href = `/instructions/${user_id}`;
         }
 
         async function com_test(user_id) {
-            window.location.href = `/communication/${user_id}`;
+            window.location.href = `/com_instructions/${user_id}`;
         }
         async function drives(user_id) {
             window.location.href = `/drives/${user_id}`;
