--- a/templates/communication/com_instructions.html
+++ b/templates/communication/com_instructions.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Communication Test</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='grammer_test.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='instruction.css') }}">
     <script>
         async function start_comtest(user_id) {
             window.location.href = `/communication/${user_id}`;
