removed resume feature

--- a/templates/drive.html
+++ b/templates/drive.html
@@ -30,7 +30,7 @@
         <button class="menu-item"><a class="logout-link" href="/home/{{user_id}}">Back</a></button>
     </div>
     <div class="title">
-        <h2 class="t1">Upcoming Drives {{dept}}</h2>
+        <h2 class="t1">Upcoming Drives</h2>
     </div>
     <div class="container">
         {% for doc in newplacements %}
